--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type"text/css" href="stylesheet.css">
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/portfolio.js"></script>
 </head>
-<body>
-	<h1>Hello World</h1>
+	<h2>Welcome to my portfolio!</h2>
+	<img src="https://static-s.aa-cdn.net/img/ios/794295819/611f9a9c1fc1cee3dc688ba201f446d3?v=1">
+	<p>Name: Doge</p>
+	<p>Age: 3</p>
+	<p>Hobby: Bark</p>
+
+	<div>
+	  <button id='blue-btn'>Blue</button>
+	  <button id='green-btn'>Green</button>
+	  <button id='red-btn'>Red</button>
+	</div>
 </body>
 </html>
